fix(scroll): use body scroll instead of overflow container

--- a/src/components/core/Navigation/Navigation.css
+++ b/src/components/core/Navigation/Navigation.css
@@ -1,5 +1,5 @@
 .c-navigation {
-  @apply bg-primary-500 z-40 flex fixed top-0 left-0 w-full items-center justify-between pl-8 pr-4 py-3 flex-shrink-0 md:pr-8 md:static md:py-16 md:flex-col md:w-48 lg:w-64 xl:w-80;
+  @apply bg-primary-500 z-40 flex fixed top-0 left-0 w-full items-center justify-between pl-8 pr-4 py-3 flex-shrink-0 md:pr-8 md:h-screen md:sticky md:py-16 md:flex-col md:w-48 lg:w-64 xl:w-80;
 }
 
 .c-navigation__list {
